force-app/main/default/objects/ssot__AssetParticipant__dlm/fields/ssot__FromDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__FromDate__c</fullName>
    <label>From Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FromDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>