force-app/main/default/objects/ssot__AssetParticipant__dlm/fields/ssot__rel_1697761231055_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761231055_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssetParticipant_AssetId_map_Asset_I_rel</label>
    <referenceTo>ssot__Asset__dlm</referenceTo>
    <relationshipLabel>AssetParticipant_AssetId_map_Asset_I_rel</relationshipLabel>
    <relationshipName>rel_1697761231055_end</relationshipName>
    <type>Lookup</type>
</CustomField>