force-app/main/default/objects/ssot__AssetParticipant__dlm/fields/ssot__rel_1697761231193_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761231193_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AssetParticipant_ParticipantId_map_A_rel</label>
    <referenceTo>ssot__Account__dlm</referenceTo>
    <relationshipLabel>AssetParticipant_ParticipantId_map_A_rel</relationshipLabel>
    <relationshipName>rel_1697761231193_end</relationshipName>
    <type>Lookup</type>
</CustomField>