force-app/main/default/objects/ssot__AssetParticipant__dlm/fields/ssot__ToDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ToDate__c</fullName>
    <label>To Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ToDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>